feat: Merge Activity Stream Events - MEED-2204 - Meeds-io/MIPs#50 (#1154)
This change will merge Activity Stream events to not differenciate
between Space and User Streams in order to simplify Events list.

--- a/services/src/main/resources/locale/addon/Gamification_en.properties
+++ b/services/src/main/resources/locale/addon/Gamification_en.properties
@@ -53,6 +53,14 @@ exoplatform.gamification.gamificationinformation.rule.title.receiveCommentOnNetw
 exoplatform.gamification.gamificationinformation.rule.title.addForumPost=Forum : Reply topic
 exoplatform.gamification.gamificationinformation.rule.title.likeActivityTargetUserStream=Activity Stream (own) : Receive like
 exoplatform.gamification.gamificationinformation.rule.title.sendRelationshipRequest=Network : Send connection request
+exoplatform.gamification.gamificationinformation.rule.title.postActivity=Activity stream: Post an activity
+exoplatform.gamification.gamificationinformation.rule.title.postActivityComment=Activity stream: Comment an activity
+exoplatform.gamification.gamificationinformation.rule.title.likeActivity=Activity stream: Like an activity
+exoplatform.gamification.gamificationinformation.rule.title.likeActivityComment=Activity stream: Like a comment
+exoplatform.gamification.gamificationinformation.rule.title.receiveActivity=Activity stream: Receive an activity
+exoplatform.gamification.gamificationinformation.rule.title.receiveCommentOnActivity=Activity stream: Receive a comment
+exoplatform.gamification.gamificationinformation.rule.title.receiveLikeOnActivity=Activity stream: Receive a like
+exoplatform.gamification.gamificationinformation.rule.title.receiveLikeOnActivityComment=Activity Stream: Receive a like on a comment
 exoplatform.gamification.gamificationinformation.rule.title.addActivityOnMyStream=Activity Stream (own) : Post activity
 exoplatform.gamification.gamificationinformation.rule.title.addSpace=Spaces : Create space
 exoplatform.gamification.gamificationinformation.rule.title.updateSpaceAvatar=Spaces : Customize the space avatar
