--- a/services/src/main/resources/locale/addon/Gamification_fr.properties
+++ b/services/src/main/resources/locale/addon/Gamification_fr.properties
@@ -53,6 +53,14 @@ exoplatform.gamification.gamificationinformation.rule.title.receiveCommentOnNetw
 exoplatform.gamification.gamificationinformation.rule.title.addForumPost=Forum : R\u00E9pondre dans une discussion
 exoplatform.gamification.gamificationinformation.rule.title.likeActivityTargetUserStream=Fil d'activit\u00E9s (perso) : Recevoir un "J'aime"
 exoplatform.gamification.gamificationinformation.rule.title.sendRelationshipRequest=R\u00E9seau : Envoyer une demande de contact
+exoplatform.gamification.gamificationinformation.rule.title.postActivity=Flux d'activit\u00E9: Publier une activit\u00E9
+exoplatform.gamification.gamificationinformation.rule.title.postActivityComment=Flux d'activit\u00E9: Commenter une activit\u00E9
+exoplatform.gamification.gamificationinformation.rule.title.likeActivity=Flux d'activit\u00E9: Aimer une activit\u00E9
+exoplatform.gamification.gamificationinformation.rule.title.likeActivityComment=Flux d'activit\u00E9: Aimer un commentaire
+exoplatform.gamification.gamificationinformation.rule.title.receiveActivity=Flux d'activit\u00E9: Recevoir une activit\u00E9
+exoplatform.gamification.gamificationinformation.rule.title.receiveCommentOnActivity=Flux d'activit\u00E9: Recevoir un commentaire
+exoplatform.gamification.gamificationinformation.rule.title.receiveLikeOnActivity=Flux d'activit\u00E9: Recevoir un "J'aime"
+exoplatform.gamification.gamificationinformation.rule.title.receiveLikeOnActivityComment=Flux d'activit\u00E9: Recevoir un "J'aime" sur l'un de ses commentaires
 exoplatform.gamification.gamificationinformation.rule.title.addActivityOnMyStream=Flux d'activit\u00E9 (perso) : Publier une activit\u00E9
 exoplatform.gamification.gamificationinformation.rule.title.addSpace=Espaces : Cr\u00E9er un espace
 exoplatform.gamification.gamificationinformation.rule.title.updateSpaceAvatar=Espaces : Personnaliser l'avatar
