introduce develop translation

--- a/portlets/src/main/resources/locale/navigation/group/platform/administrators_en.properties
+++ b/portlets/src/main/resources/locale/navigation/group/platform/administrators_en.properties
@@ -17,5 +17,5 @@
 
 
 gamification.intranet.badgesManagement=Badges
-
+gamification.intranet.gamificationdevelop=Gamificationdevelop
 gamification.intranet.gamification=Gamification
