apply new token for translation develop-exo

--- a/portlets/src/main/resources/locale/navigation/portal/global_en.properties
+++ b/portlets/src/main/resources/locale/navigation/portal/global_en.properties
@@ -19,3 +19,4 @@ portal.global.contributions=Contributions
 portal.global.programs=Programs
 portal.global.actions=Actions
 portal.global.achievements=Achievements
+portal.global.newtoken=new token
