ensure upload when translation changes and check project build

--- a/portlets/src/main/resources/locale/portlet/Analytics_en.properties
+++ b/portlets/src/main/resources/locale/portlet/Analytics_en.properties
@@ -36,3 +36,5 @@ analytics.createAnnouncement=Create announcement
 analytics.updateAnnouncement=Update announcement
 analytics.challengeDetail=Challenge detail Drawer
 analytics.ruleDetail=Rule detail Drawer
+analytics.ruleDetail.develop=apply change develop tt
+analytics.ruleDet.develop=apply change develop tt
