Add merge translations to develop branches

--- a/portlets/src/main/resources/locale/portlet/Challenges_en.properties
+++ b/portlets/src/main/resources/locale/portlet/Challenges_en.properties
@@ -427,3 +427,4 @@ gamification.achivementRecurrence.weeklyTooltip=Do it once per week
 gamification.achivementRecurrence.monthly=Monthly
 gamification.achivementRecurrence.monthlyTitle=Monthly
 gamification.achivementRecurrence.monthlyTooltip=Do it once per month
+gamification.achivementRecurrence.monthlyTooltiptestdevelop=Do it oncedecc deefd dcvjjdd scscf dcddvdv nnnvevzv ddddffff fffff dfdfdf ferberherh fffffff
