--- a/services/src/main/resources/locale/addon/Gamification_en.properties
+++ b/services/src/main/resources/locale/addon/Gamification_en.properties
@@ -469,3 +469,4 @@ Notification.gamification.mail.content.newActionAvailable2=Go check its detail a
 Notification.gamification.mail.content.newActionAvailable3=Thanks in advance for your initiative.
 Notification.gamification.mail.content.newAchievement={0} has achieved this action. Let''s encourage this and embrace this participation.
 Notification.gamification.mail.content.newAchievement_develop=changed message for new achievement develop.
+Notification.gamification.mail.content.newAchievement_develop_change_local=changed message for new achievement developv change local.
