fix locale pattern

--- a/services/src/main/resources/locale/addon/Gamification_en.properties
+++ b/services/src/main/resources/locale/addon/Gamification_en.properties
@@ -470,3 +470,5 @@ Notification.gamification.mail.content.newActionAvailable3=Thanks in advance for
 Notification.gamification.mail.content.newAchievement={0} has achieved this action. Let''s encourage this and embrace this participation.
 Notification.gamification.mail.content.newAchievement_develop=changed message for new achievement develop.
 Notification.gamification.mail.content.newAchievement_develop_change_local=changed message for new achievement developv change local.
+Notification.gamification.mail.content.newAchievement_develop_change_local_other=changed message for new achievement developv change local other.
+
