fix locale pattern

--- a/services/src/main/resources/locale/addon/Gamification_en.properties
+++ b/services/src/main/resources/locale/addon/Gamification_en.properties
@@ -471,5 +471,5 @@ Notification.gamification.mail.content.newAchievement={0} has achieved this acti
 Notification.gamification.mail.content.newAchievement_develop=changed message for new achievement develop.
 Notification.gamification.mail.content.newAchievement_develop_change_local=changed message for new achievement developv change local.
 Notification.gamification.mail.content.newAchievement_develop_change_local_other=changed message for new achievement developv change local other.
-Notification.gamification.mail.content.newAchievement_develop_change_local_other_one=changed message for new achievement developv change local other onecscsc.
+Notification.gamification.mail.content.newAchievement_develop_change_local_other_one=changed message for new achievement developv change local other onecscsc dd.
 
