--- a/services/src/main/resources/locale/addon/Gamification_ar.properties
+++ b/services/src/main/resources/locale/addon/Gamification_ar.properties
@@ -65,8 +65,8 @@ exoplatform.gamification.gamificationinformation.rule.title.addActivityOnMyStrea
 exoplatform.gamification.gamificationinformation.rule.title.addSpace=Spaces \: Create space
 exoplatform.gamification.gamificationinformation.rule.title.updateSpaceAvatar=Spaces \: Customize the space avatar
 exoplatform.gamification.gamificationinformation.rule.title.updateSpaceBanner=Spaces \: Customize the space banner
-exoplatform.gamification.gamificationinformation.rule.title.updateSpaceDescription=Spaces \: Customize the space description
-exoplatform.gamification.gamificationinformation.rule.title.updateSpaceApplications=Spaces \: Customize the space applications
+exoplatform.gamification.gamificationinformation.rule.title.updateSpaceDescription=Spaces : Customize the space description
+exoplatform.gamification.gamificationinformation.rule.title.updateSpaceApplications=Spaces : Customize the space applications
 exoplatform.gamification.gamificationinformation.rule.title.inviteUserToSpace=Spaces \: Invite people to come
 exoplatform.gamification.gamificationinformation.rule.title.openForumTopic=Forum \: Topic viewed (author)
 exoplatform.gamification.gamificationinformation.rule.title.likeActivityOnNetworkStream=Activity stream (network) \: Like activity
