suppress file from develop

--- a/portlets/src/main/resources/locale/portlet/Analytics_af_ZA.properties
+++ b/portlets/src/main/resources/locale/portlet/Analytics_af_ZA.properties
@@ -25,7 +25,7 @@ analytics.createProgram=Create program
 analytics.updateProgram=Update program
 analytics.deleteProgram=Delete program
 analytics.enableProgram=Enable program
-analytics.disableProgram=Disable program
+analytics.disableProgram=Disable programrrr
 analytics.viewRule=View rule
 analytics.createRule=Create rule
 analytics.updateRule=Update rule
